[package]
name = "temporalcoresdk"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38.0", features = ["serde"]}
temporalio_sdk_core = { git = "https://github.com/temporalio/sdk-rust.git", tag = "v0.4.0", package="temporalio-sdk-core" }
temporalio_sdk_common =  { git = "https://github.com/temporalio/sdk-rust.git", tag = "v0.4.0", package="temporalio-common" }
temporalio_sdk_client =  { git = "https://github.com/temporalio/sdk-rust.git", tag = "v0.4.0", package="temporalio-client" }
url = "2.5.8"
tracing = "0.1.44"
tokio = "1.52.3"
prost-wkt-types = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }